<?xml version="1.0"?>
<package>
  <name>celsius</name>
  <version>0.0.1</version>
  <description>
  A/C control for the Ford Fusion 2017.
  </description>
  <maintainer email="ariel@autti.co">ingenieroariel</maintainer>
  <license>Undefined</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>socketcan_bridge</run_depend>
</package>
